[package]
name = "prospector"
version = "0.1.0"
edition = "2021"

[dependencies]
# Mandatory
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonseq = "0.1"
argh = "0.1"
cel-interpreter = { version = "0.9.0", features = ["json"] }
simplelog = { version = "0.12.2", features = ["paris"] }
semver = "1.0"
regex = "1.11"
dependency-graph = "0.1.5"

# Optional
regorus = { version = "0.2", optional = true }

[features]
rego = ["dep:regorus"]

#[profile.release]
#lto = true
#strip = true
